--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Added a heading.</h1>
     <h2>Look Mama,I am using Github.</h2>
 </body>
 </html>
